--- a/index.qmd
+++ b/index.qmd
@@ -1,11 +1,5 @@
 ---
-title: "NatalieAStorm.github.io"
+title: "Natalie Storm"
 ---
 
-This is a Quarto website.
-
-To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
-
-```{r}
-1 + 1
-```
+Hi! I am a field technician in the Beltran Lab at UC Santa Cruz.
